feat: addStore
