# config/responseStatus.js
@@ -39,4 +39,10 @@ export const status = {
         code: "COMMON004",
         message: "이미 등록된 이메일입니다.",
     },
+    STORE_IS_REGISTERED: {
+        status: StatusCodes.BAD_REQUEST,
+        isSuccess: false,
+        code: "COMMON004",
+        message: "이미 등록된 가게입니다.",
+    },
 }
