# src/dtos/storeDto.js
@@ -1,0 +1,6 @@
+export const addStoreResponseDTO = (store) => {
+    return {
+        name: store[0].name,
+        registerNumber: store[0].register_number,
+    }
+}
