# swagger/main.yaml
@@ -1,3 +1,7 @@
+tags:
+    - name: User
+    - name: Store
+
 paths:
     /user/signin:
         post:
@@ -50,6 +54,94 @@ paths:
                               type: array
                               description: 선호 카테고리 번호
                               example: [1, 3, 5]
+            responses:
+                "200":
+                    description: 회원 가입 성공!
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: integer
+                                example: 200
+                            isSuccess:
+                                type: boolean
+                                example: true
+                            code:
+                                type: integer
+                                example: 2000
+                            message:
+                                type: string
+                                example: "success!"
+                            data:
+                                type: object
+                                example:
+                                    {
+                                        "email": "swaggerTest@mail.com",
+                                        "name": "swagger",
+                                        "preferCategory": ["한식", "일식"],
+                                    }
+
+                "400":
+                    description: 잘못된 요청
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: integer
+                                example: 400
+                            isSuccess:
+                                type: boolean
+                                example: false
+                            code:
+                                type: integer
+                                example: COMMON001
+                            message:
+                                type: string
+                                example: 잘못된 요청입니다
+
+                "500":
+                    description: 서버 에러
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: integer
+                                example: 500
+                            isSuccess:
+                                type: boolean
+                                example: false
+                            code:
+                                type: integer
+                                example: COMMON000
+                            message:
+                                type: string
+                                example: 서버 에러, 관리자에게 문의 바랍니다.
+    /stores:
+        post:
+            tags:
+                - Store
+            summary: 가게 추가
+            parameters:
+                - name: addStore
+                  in: body
+                  schema:
+                      properties:
+                          region_id:
+                              type: int
+                              description: 지역 아이디
+                              example: 1
+                          name:
+                              type: string
+                              description: 가게 이름
+                              example: store1
+                          register_number:
+                              type: int
+                              description: 가게 등록 번호
+                              example: 1
+                          type:
+                              type: string
+                              description: 업종
+                              example: 중식당
             responses:
                 "200":
                     description: 회원 가입 성공!
